# fastcarbs

./: .gitmodules  CMakeLists.txt  README.md  fastcarbs_core.cpp  pyproject.toml  test_carbs.py
fastcarbs/: __init__.py  model.py
test/: main_repo_example.py  test_against_pyro.py
